--- a/sass/layout/_common.scss
+++ b/sass/layout/_common.scss
@@ -24,3 +24,9 @@ img {
 .list {
   list-style: none;
 }
+
+body {
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+  font-family: Roboto, sans-serif;
+}
