--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,18 @@
+// utils
 @import "./utils/variables";
-@import "./base/common";
+@import "./utils/visually-hidden";
+
+// base
+@import "./layout/common";
+@import "./layout/container";
+@import "./layout/heder";
+@import "./layout/hero";
+@import "./layout/benefits";
+@import "./layout/about";
+@import "./layout/team";
+@import "./layout/regular-client";
+@import "./layout/footer";
+@import "./layout/portfolio-button";
+@import "./layout/my-work";
+@import "./layout/modal";
+@import "./layout/footer-form";
