--- a/sass/layout/_container.scss
+++ b/sass/layout/_container.scss
@@ -3,4 +3,14 @@
   margin: 0 auto;
   padding-left: 15px;
   padding-right: 15px;
+
+  .header & {
+    display: flex;
+    align-items: center;
+  }
+
+  .my-work & {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 }
