--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,3 +16,6 @@
 @import "./layout/my-work";
 @import "./layout/modal";
 @import "./layout/footer-form";
+
+// components
+@import "./components/logo";
