--- a/css/main.css
+++ b/css/main.css
@@ -74,6 +74,11 @@ body {
   align-items: center;
 }
 
+.my-work .container {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+
 .navigation-logo {
   padding-top: 24px;
   padding-bottom: 25px;
@@ -100,15 +105,14 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.contakt-link:hover, .contakt-link:focus {
+  color: var(--accent-color);
+}
+
 .contakct-icon {
   margin-right: 10px;
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.contakt-link:hover,
-.contakt-link:focus {
-  color: var(--accent-color);
 }
 
 .contakt-link:hover .contakct-icon,
@@ -142,21 +146,6 @@ body {
   margin-right: 50px;
 }
 
-.navigation-logo {
-  color: var(--primary-black-color);
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  margin-right: 93px;
-  align-items: center;
-}
-
-.logo-color-web {
-  color: var(--accent-color);
-}
-
 .nav-link {
   position: relative;
   color: var(--secondary-text-color);
@@ -165,6 +154,18 @@ body {
   line-height: 1.143;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav-link:hover, .nav-link:focus {
+  color: var(--accent-color);
+}
+
+.accent {
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.143;
+  letter-spacing: 0.02em;
 }
 
 .accent::after {
@@ -177,19 +178,6 @@ body {
   left: 0px;
   bottom: 0px;
   background-color: var(--accent-color);
-}
-
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
-}
-
-.accent {
-  color: var(--accent-color);
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.02em;
 }
 
 /* горизонтальна лінія */
@@ -235,8 +223,7 @@ body {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.order-btn:hover,
-.order-btn:focus {
+.order-btn:hover, .order-btn:focus {
   background: var(--hover-color-btn);
 }
 
@@ -246,14 +233,6 @@ body {
 
 .benefits-list {
   display: flex;
-}
-
-.benefits-item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.benefits-item {
-  max-width: 270px;
 }
 
 .benefits-list h3 {
@@ -271,6 +250,14 @@ body {
   font-size: 14px;
   line-height: 1.714;
   letter-spacing: 0.03em;
+}
+
+.benefits-item {
+  max-width: 270px;
+}
+
+.benefits-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .thumb-benefits {
@@ -342,14 +329,14 @@ body {
   display: flex;
 }
 
-.team-item:not(:last-child) {
-  margin-right: 30px;
-}
-
 .team-item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
+}
+
+.team-item:not(:last-child) {
+  margin-right: 30px;
 }
 
 .team-title {
@@ -404,6 +391,10 @@ body {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.icon:hover, .icon:focus {
+  background-color: var(--accent-color);
+}
+
 .social-link {
   display: flex;
   justify-content: center;
@@ -417,11 +408,6 @@ body {
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.icon:hover,
-.icon:focus {
-  background-color: var(--accent-color);
 }
 
 .list-item-icon:hover .socialnetwork-link,
@@ -462,13 +448,11 @@ body {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.client-link:focus,
-.client-link:hover {
+.client-link:focus, .client-link:hover {
   border-color: var(--accent-color);
 }
 
-.client-link:focus,
-.client-link:hover {
+.client-link:focus, .client-link:hover {
   fill: var(--accent-color);
 }
 
@@ -507,19 +491,27 @@ footer {
   padding: 60px 0px;
 }
 
-.footer-logo-link {
-  color: var(--primary-white-color);
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
+footer .container {
+  display: flex;
+  align-items: baseline;
+}
+
+footer .socialnetwork-link-footer {
+  fill: var(--primary-white-color);
+  width: 20px;
+  height: 20px;
 }
 
 .footer-logo-link {
   display: flex;
   margin-bottom: 20px;
   margin-right: 0 auto;
+  color: var(--primary-white-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
 }
 
 .address-list-str {
@@ -575,17 +567,6 @@ footer {
   margin-bottom: 20px;
 }
 
-footer .container {
-  display: flex;
-  align-items: baseline;
-}
-
-.socialnetwork-link-footer {
-  fill: var(--primary-white-color);
-  width: 20px;
-  height: 20px;
-}
-
 .footer-social-link {
   display: flex;
   justify-content: center;
@@ -598,8 +579,7 @@ footer .container {
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-social-link:hover,
-.footer-social-link:focus {
+.footer-social-link:hover, .footer-social-link:focus {
   background-color: var(--accent-color);
 }
 
@@ -637,16 +617,10 @@ footer .container {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.button-title:hover,
-.button-title:focus {
+.button-title:hover, .button-title:focus {
   color: var(--primary-white-color);
   background: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
-.my-work .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
 }
 
 .my-work-list {
@@ -689,8 +663,7 @@ footer .container {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.my-work-item:focus,
-.my-work-item:hover {
+.my-work-item:focus, .my-work-item:hover {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -800,10 +773,6 @@ footer .container {
   transition: border-color 250ms linear;
 }
 
-.modal-form-input:focus + .modal-form-icon {
-  fill: var(--accent-color);
-}
-
 .modal-form-input:focus {
   outline: none;
   border-color: var(--accent-color);
@@ -818,6 +787,10 @@ footer .container {
   width: 18px;
   height: 18px;
   transition: background-color 250ms linear;
+}
+
+.modal-form-input:focus + .modal-form-icon {
+  fill: var(--accent-color);
 }
 
 .modal-form-message {
@@ -845,15 +818,6 @@ footer .container {
   color: rgba(117, 117, 117, 0.5);
 }
 
-.modal-form-label-policy::before {
-  display: inline-block;
-  width: 16px;
-  height: 15px;
-  outline: 1px solid #000;
-  content: "";
-  margin-right: 10px;
-}
-
 .modal-form-check-policy:checked + .modal-form-label-policy::before {
   background-image: url(../image/icon-check.svg);
   outline: none;
@@ -875,6 +839,15 @@ footer .container {
 .modal-form-label-policy a {
   color: var(--accent-color);
   margin-left: 5px;
+}
+
+.modal-form-label-policy::before {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  outline: 1px solid #000;
+  content: "";
+  margin-right: 10px;
 }
 
 .order-btn-modal {
@@ -937,5 +910,20 @@ footer .container {
   margin-left: 10px;
   height: 24px;
   width: 24px;
+}
+
+.navigation-logo {
+  color: var(--primary-black-color);
+  font-family: Raleway, sans-serif;
+  font-weight: 400;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  margin-right: 93px;
+  align-items: center;
+}
+
+.logo-color-web {
+  color: var(--accent-color);
 }
 /*# sourceMappingURL=main.css.map */
