--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -4,29 +4,30 @@
 
 .benefits-list {
   display: flex;
+
+  & h3 {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.143;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--secondary-text-color);
+    margin-bottom: 10px;
+  }
+
+  & p {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.714;
+    letter-spacing: 0.03em;
+  }
 }
 
-.benefits-item:not(:last-child) {
-  margin-right: 30px;
-}
 .benefits-item {
   max-width: 270px;
-}
-
-.benefits-list h3 {
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.143;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--secondary-text-color);
-  margin-bottom: 10px;
-}
-.benefits-list p {
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 1.714;
-  letter-spacing: 0.03em;
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .thumb-benefits {
