--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,19 +1,29 @@
 footer {
   background-color: var(--primary-footer-head-color);
   padding: 60px 0px;
+
+  & .container {
+    display: flex;
+    align-items: baseline;
+  }
+
+  & .socialnetwork-link-footer {
+    fill: var(--primary-white-color);
+    width: 20px;
+    height: 20px;
+  }
 }
+
 .footer-logo-link {
+  display: flex;
+  margin-bottom: 20px;
+  margin-right: 0 auto;
   color: var(--primary-white-color);
   font-family: Raleway, sans-serif;
   font-weight: 400;
   font-size: 26px;
   line-height: 1.2;
   letter-spacing: 0.03em;
-}
-.footer-logo-link {
-  display: flex;
-  margin-bottom: 20px;
-  margin-right: 0 auto;
 }
 
 .address-list-str {
@@ -65,17 +75,6 @@ footer {
   margin-bottom: 20px;
 }
 
-footer .container {
-  display: flex;
-  align-items: baseline;
-}
-
-.socialnetwork-link-footer {
-  fill: var(--primary-white-color);
-  width: 20px;
-  height: 20px;
-}
-
 .footer-social-link {
   display: flex;
   justify-content: center;
@@ -86,13 +85,13 @@ footer .container {
   background-color: var(--background-icon-footer-color);
   cursor: pointer;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.footer-social-link:hover,
-.footer-social-link:focus {
-  background-color: var(--accent-color);
-}
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 
-.footer-social-link:not(:last-child) {
-  margin-right: 10px;
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
 }
