--- a/sass/layout/_heder.scss
+++ b/sass/layout/_heder.scss
@@ -1,7 +1,3 @@
-.header .container {
-  display: flex;
-  align-items: center;
-}
 .navigation-logo {
   padding-top: 24px;
   padding-bottom: 25px;
@@ -26,22 +22,22 @@
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .contakct-icon {
   margin-right: 10px;
   fill: currentColor;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.contakt-link:hover,
-.contakt-link:focus {
-  color: var(--accent-color);
-}
-
-.contakt-link:hover .contakct-icon,
-.contakt-link:focus .contakct-icon {
-  fill: var(--accent-color);
+  .contakt-link:hover &,
+  .contakt-link:focus & {
+    fill: var(--accent-color);
+  }
 }
 
 .nav-link,
@@ -69,20 +65,6 @@
   margin-right: 50px;
 }
 
-.navigation-logo {
-  color: var(--primary-black-color);
-  font-family: Raleway, sans-serif;
-  font-weight: 400;
-  font-size: 26px;
-  line-height: 1.2;
-  letter-spacing: 0.03em;
-  margin-right: 93px;
-  align-items: center;
-}
-
-.logo-color-web {
-  color: var(--accent-color);
-}
 .nav-link {
   position: relative;
   color: var(--secondary-text-color);
@@ -91,22 +73,11 @@
   line-height: 1.143;
   letter-spacing: 0.02em;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.accent::after {
-  content: "";
-  display: block;
-  width: 100%;
-  height: 4px;
-  border-radius: 2px;
-  position: absolute;
-  left: 0px;
-  bottom: 0px;
-  background-color: var(--accent-color);
-}
 
-.nav-link:hover,
-.nav-link:focus {
-  color: var(--accent-color);
+  &:hover,
+  &:focus {
+    color: var(--accent-color);
+  }
 }
 
 .accent {
@@ -115,6 +86,18 @@
   font-size: 14px;
   line-height: 1.143;
   letter-spacing: 0.02em;
+
+  &::after {
+    content: "";
+    display: block;
+    width: 100%;
+    height: 4px;
+    border-radius: 2px;
+    position: absolute;
+    left: 0px;
+    bottom: 0px;
+    background-color: var(--accent-color);
+  }
 }
 
 /* горизонтальна лінія */
