--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -36,9 +36,9 @@
   padding: 10px 32px;
   cursor: pointer;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.order-btn:hover,
-.order-btn:focus {
-  background: var(--hover-color-btn);
+  &:hover,
+  &:focus {
+    background: var(--hover-color-btn);
+  }
 }
