--- a/sass/layout/_my-work.scss
+++ b/sass/layout/_my-work.scss
@@ -1,8 +1,3 @@
-.my-work .container {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-
 .my-work-list {
   display: flex;
   flex-wrap: wrap;
@@ -30,23 +25,23 @@
   padding: 64px 23px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.my-work-link:hover .overlay,
-.my-work-link:focus .overlay {
-  transform: translateY(0);
+  .my-work-link:hover &,
+  .my-work-link:focus & {
+    transform: translateY(0);
+  }
 }
 
 .my-work-item {
   outline: 1px solid #eeeeee;
   margin: 15px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.my-work-item:focus,
-.my-work-item:hover {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
+  &:focus,
+  &:hover {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
 
 .my-work-title {
