--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -6,14 +6,16 @@
 .team-list {
   display: flex;
 }
-.team-item:not(:last-child) {
-  margin-right: 30px;
-}
+
 .team-item {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
   width: 270px;
+
+  &:not(:last-child) {
+    margin-right: 30px;
+  }
 }
 
 .team-title {
@@ -33,13 +35,14 @@
   padding-bottom: 30px;
   padding-left: 32px;
   padding-right: 32px;
-}
-.developers-information > p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 1.188;
-  letter-spacing: 0.03em;
-  margin-bottom: 16px;
+
+  & > p {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.188;
+    letter-spacing: 0.03em;
+    margin-bottom: 16px;
+  }
 }
 
 .name-developers {
@@ -64,6 +67,11 @@
   border-radius: 50%;
   cursor: pointer;
   transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover,
+  &:focus {
+    background-color: var(--accent-color);
+  }
 }
 
 .social-link {
@@ -79,14 +87,9 @@
   width: 20px;
   height: 20px;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 
-.icon:hover,
-.icon:focus {
-  background-color: var(--accent-color);
-}
-
-.list-item-icon:hover .socialnetwork-link,
-.list-item-icon:focus .socialnetwork-link {
-  fill: var(--primary-white-color);
+  .list-item-icon:hover &,
+  .list-item-icon:focus & {
+    fill: var(--primary-white-color);
+  }
 }
